plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.company.maintenance'
version = '0.0.1-SNAPSHOT'
description = 'Prueba Version reactiva'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'

	implementation 'software.amazon.awssdk:dynamodb:2.29.21'
	implementation 'software.amazon.awssdk:dynamodb-enhanced:2.29.21'
	implementation 'software.amazon.awssdk:netty-nio-client:2.29.21'

	
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.projectlombok:lombok'
	// developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	implementation 'software.amazon.awssdk:secretsmanager:2.29.21'
	implementation 'software.amazon.awssdk:auth:2.29.21'
	implementation 'software.amazon.awssdk:regions:2.29.21'
}

tasks.named('test') {
	useJUnitPlatform()
}
